# diesel-belongs-to-bug

./: Cargo.toml  README.md
src/: lib.rs  main.rs  models.rs  schema.rs
