[package]
authors = ["Berkus Decker <berkus@madfire.net>"]
name = "diesel-belongs-to-bug"
version = "0.1.0"

[dependencies]
dotenv = "0.10.1"
serde = "1.0.15"
serde_derive = "1.0.15"

[dependencies.chrono]
features = ["serde"]
version = "0.4.0"

[dependencies.diesel]
features = [
    "postgres",
    "chrono",
]
version = "0.16.0"

[dependencies.diesel_codegen]
features = ["postgres"]
version = "0.16.0"
